// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The ActionListFeatures component should not render with no actions 1`] = `null`;

exports[`The ActionListFeatures component should render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View />
    <View
      cardPadding={true}
      style={
        Object {
          "paddingHorizontal": 24,
          "paddingVertical": 24,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The ActionListFeatures component should render a button for onPressActionListButton 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View />
    <View
      cardPadding={true}
      style={
        Object {
          "paddingHorizontal": 24,
          "paddingVertical": 24,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={true}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#A5A5A5",
              "borderRadius": 16,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "marginTop": 8,
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Foo 
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The ActionListFeatures component should render a loading state for isLoading 1`] = `
<View
  isLoading={true}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 14,
            "marginVertical": 3.5,
            "width": "60%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 24,
            "marginVertical": 1.8000000000000007,
            "width": "100%",
          }
        }
      />
    </View>
    <View
      cardPadding={true}
      style={
        Object {
          "paddingHorizontal": 24,
          "paddingVertical": 24,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`The ActionListFeatures component should render with a subtitle 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
          }
        }
      >
        This renders larger than you might expect
      </Text>
    </View>
    <View
      cardPadding={true}
      style={
        Object {
          "paddingHorizontal": 24,
          "paddingVertical": 24,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The ActionListFeatures component should render with a title 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        This renders smaller than its name would suggest
      </Text>
    </View>
    <View
      cardPadding={true}
      style={
        Object {
          "paddingHorizontal": 24,
          "paddingVertical": 24,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "paddingBottom": 8,
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/200",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 64,
              "marginRight": 16,
              "overflow": "hidden",
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Boom
          </Text>
          <Text
            bold={false}
            ellipsizeMode="tail"
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#A5A5A5",
                "fontFamily": "InterUI-Regular",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            What
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
